--- a/src/app/Utilisateur/user-professeur/user-professeur.component.css
+++ b/src/app/Utilisateur/user-professeur/user-professeur.component.css
@@ -54,4 +54,19 @@ tbody{
     /* background-color: #457A74; */
     color: #ffdb58;
   }
+
+  .custom-link{
+    border: 1px solid #ced4da; /* Couleur de la bordure */
+    padding: 0.5rem 1rem; /* Espacement interne */
+    border-radius: 5px; /* Rayon des coins */
+  }
   
+  .rowEval{
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    box-sizing: border-box;
+  }
+  .card{
+    width: 25rem;
+  }
